[gd_scene load_steps=22 format=3 uid="uid://j5as40ig7f3t"]

[ext_resource type="Script" uid="uid://dpmi4b802mrkh" path="res://Scripts/main.gd" id="1_hptm8"]
[ext_resource type="Texture2D" uid="uid://3pl1ppjn0yw5" path="res://img/panorama_image (2).png" id="1_ynf5e"]
[ext_resource type="Script" uid="uid://b3kw0vbbxjru" path="res://Scripts/vehicle_body_3d.gd" id="2_hptm8"]
[ext_resource type="PackedScene" uid="uid://dngoe2jeakqeb" path="res://3DModels/low-poly_cartoon_style_car_03.glb" id="3_d1ilt"]
[ext_resource type="Script" uid="uid://0pj6vevpq8hq" path="res://Scripts/roof_eq.gd" id="5_d1ilt"]
[ext_resource type="PackedScene" uid="uid://cp1xgnjc6t5fs" path="res://3DModels/low_poly_retro_palm_tree.glb" id="5_fdnlq"]
[ext_resource type="Script" uid="uid://cvh5evafvffhi" path="res://Scripts/window_eq.gd" id="6_6iyac"]
[ext_resource type="Script" uid="uid://db2u66onynmvp" path="res://Scripts/SpectrumSpawner.gd" id="6_jkdf5"]
[ext_resource type="PackedScene" uid="uid://bdosa12yxj7m" path="res://3DModels/sign_text.glb" id="7_wsu2k"]
[ext_resource type="Script" uid="uid://binsr4wgq8dqy" path="res://Scripts/VieportContainer.gd" id="8_hptm8"]
[ext_resource type="Script" uid="uid://brbn8s6rka1y7" path="res://Scripts/mini_map_cam.gd" id="8_k12tt"]
[ext_resource type="PackedScene" uid="uid://og1jec2w2646" path="res://3DModels/signboard.fbx" id="9_h1bgf"]
[ext_resource type="Script" uid="uid://b2hjrvvfsuk7f" path="res://Scripts/StoreMenu.gd" id="13_fdnlq"]
[ext_resource type="Script" uid="uid://bp1dwcg0sw4nw" path="res://Scripts/Popups.gd" id="14_jkdf5"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_lquwl"]
panorama = ExtResource("1_ynf5e")

[sub_resource type="Sky" id="Sky_272bh"]
sky_material = SubResource("PanoramaSkyMaterial_lquwl")

[sub_resource type="Environment" id="Environment_7dm0k"]
background_mode = 2
sky = SubResource("Sky_272bh")
ambient_light_source = 3
ambient_light_color = Color(1, 0.962932, 0.785119, 1)
ambient_light_energy = 0.0
glow_intensity = 3.92
fog_light_energy = 0.59
fog_sun_scatter = 0.5
fog_height_density = -16.0
volumetric_fog_enabled = true
volumetric_fog_density = 0.002
volumetric_fog_gi_inject = 3.05
volumetric_fog_detail_spread = 0.965936

[sub_resource type="BoxMesh" id="BoxMesh_ig7tw"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1bvp3"]
depth_draw_mode = 2
metallic = 0.1
metallic_specular = 0.15

[sub_resource type="BoxShape3D" id="BoxShape3D_0xm2m"]
size = Vector3(77.4329, 1, 35.324)

[sub_resource type="BoxShape3D" id="BoxShape3D_1bvp3"]
size = Vector3(1.02294, 2.2668, 0.657196)

[node name="Main" type="Node3D"]
script = ExtResource("1_hptm8")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.966358, 0.0446066, -0.253301, 0.222371, 0.343551, 0.91348, -0.128074, 0.936982, -0.322098, 0, 0, 0)
light_energy = 11.64
light_indirect_energy = 2.245
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_7dm0k")

[node name="road" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="road"]
transform = Transform3D(-8.05819e-07, 0, -18.435, 0, 0.526, 0, 18.435, 0, -8.05819e-07, 0, -0.351, 0)
mesh = SubResource("BoxMesh_ig7tw")
surface_material_override/0 = SubResource("StandardMaterial3D_1bvp3")

[node name="StaticBody3D" type="StaticBody3D" parent="road"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="road/StaticBody3D"]
transform = Transform3D(-0.0179573, 0, 0.892491, 0, 0.003, 0, -0.239327, 0, -0.0669658, -2.26294e-07, -0.185, -5.177)
shape = SubResource("BoxShape3D_0xm2m")

[node name="Car" type="VehicleBody3D" parent="." node_paths=PackedStringArray("cameras")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.000281334, 0.657219, -0.00313276)
collision_layer = 3
mass = 100.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -0.1, 0)
script = ExtResource("2_hptm8")
max_engine_force = 500.0
max_brake = 20.0
cameras = [NodePath("behindCam"), NodePath("HoodCam"), NodePath("FirstPersonCam"), NodePath("frontCam"), NodePath("TopCam"), NodePath("SpringArmChaseCAm/ChaseCam")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Car"]
transform = Transform3D(1.31, 0, 0, 0, 0.437, 0, 0, 0, 2.62, 0.0200424, 0.483982, 0.0334751)
shape = SubResource("BoxShape3D_1bvp3")

[node name="WheelFL" type="VehicleWheel3D" parent="Car"]
transform = Transform3D(0.325, 0, 0, 0, 0.325, 0, 0, 0, 0.325, 0.487396, 0.130589, 0.582711)
use_as_steering = true

[node name="WheelRL" type="VehicleWheel3D" parent="Car"]
transform = Transform3D(1, 0, 0, 0, 0.302255, 0, 0, 0, 0.313162, 0.51854, 0.134144, -0.483319)
use_as_traction = true

[node name="WheelRR" type="VehicleWheel3D" parent="Car"]
transform = Transform3D(0.34, 0, 0, 0, 0.34, 0, 0, 0, 0.34, -0.475524, 0.160931, -0.450517)
use_as_traction = true

[node name="WheelFR" type="VehicleWheel3D" parent="Car"]
transform = Transform3D(1.041, 0, 0, 0, 0.299, 0, 0, 0, 0.299, -0.498612, 0.139305, 0.597657)
use_as_steering = true

[node name="SpringArmChaseCAm" type="SpringArm3D" parent="Car"]
transform = Transform3D(-0.996041, -0.0728179, 0.0509877, 0, 0.573576, 0.819152, -0.0888943, 0.815909, -0.571306, 0.255, 1.9, -4.095)

[node name="ChaseCam" type="Camera3D" parent="Car/SpringArmChaseCAm"]
transform = Transform3D(1, 0, 0, 0, 0.767166, -0.64145, 0, 0.64145, 0.767165, 0, 0.652, -0.457)
current = true
fov = 75.3

[node name="Sketchfab_Scene" parent="Car" instance=ExtResource("3_d1ilt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.96046e-08, -0.00948644, 0.00787032)

[node name="HoodCam" type="Camera3D" parent="Car"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -4.05998e-08, 0.471037, 0.46411)
fov = 92.0

[node name="FirstPersonCam" type="Camera3D" parent="Car"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.225396, 0.554704, 1.97906e-08)

[node name="frontCam" type="Camera3D" parent="Car"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -7.94244e-08, 0.239407, 0.90704)

[node name="TopCam" type="Camera3D" parent="Car"]
transform = Transform3D(-1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, 0, 11, 0)
fov = 44.5

[node name="SpotLight3D" type="SpotLight3D" parent="Car"]
transform = Transform3D(-0.726575, 0, -0.687088, 0, 1, 0, 0.687088, 0, -0.726575, -0.274211, 0.53339, -0.784377)
light_energy = 4.012

[node name="SpotLight3D2" type="SpotLight3D" parent="Car"]
transform = Transform3D(-0.949825, -0.197823, -0.242279, -0.308836, 0.470494, 0.826593, -0.0495284, 0.859943, -0.507982, -0.13049, 0.242151, 0.73144)
light_color = Color(1, 1, 0.239216, 1)
light_energy = 16.0

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Car"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.000281334, -0.657219, -0.00313276)
bus = &"Music"

[node name="behindCam" type="Camera3D" parent="Car"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.66795e-07, 1.1683, 3.05157)

[node name="RoofEQ" type="Node3D" parent="Car"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.813198, 0)
script = ExtResource("5_d1ilt")

[node name="windowEQ" type="Node3D" parent="Car"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0184231, 0.463136, 0.351507)
script = ExtResource("6_6iyac")

[node name="ThePalmOfMemories" parent="." instance=ExtResource("5_fdnlq")]
transform = Transform3D(0.504583, 0, 0, 0, 0.39636, 0, 0, 0, 0.625594, 1.53722, 0.14351, 5.33982)

[node name="SprectrumSpawner" type="Node3D" parent="."]
script = ExtResource("6_jkdf5")

[node name="SpeedLabel" type="CanvasLayer" parent="."]

[node name="SpeedLabel" type="Label" parent="SpeedLabel"]
anchors_preset = -1
anchor_left = 0.109
anchor_top = 0.15
anchor_right = 0.109
anchor_bottom = 0.15
offset_left = -125.568
offset_top = -97.2
offset_right = 125.432
offset_bottom = 96.8

[node name="TheSignOfTheCurvyRoad" parent="." instance=ExtResource("7_wsu2k")]
transform = Transform3D(-0.35, 5.28485e-08, -2.31008e-15, 0, -1.5299e-08, -0.35, -5.28485e-08, -0.35, 1.5299e-08, -1.26757, 3.17124, 5.84302)

[node name="MiniMapViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -234.0
offset_top = -139.0
offset_right = 183.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.105, 1.105)
script = ExtResource("8_hptm8")

[node name="MiniMapViewport" type="SubViewport" parent="MiniMapViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(417, 122)
render_target_update_mode = 4

[node name="MiniMapCam" type="Camera3D" parent="MiniMapViewportContainer/MiniMapViewport"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -35.808, 3.349, -1.137)
current = true
fov = 20.0
script = ExtResource("8_k12tt")
car_path = NodePath("../../../Car")

[node name="signboard" parent="." instance=ExtResource("9_h1bgf")]
transform = Transform3D(12.48, 0, 0, 0, 12.48, 0, 0, 0, 12.48, -2.83298, -0.0289622, 5.4902)

[node name="PauseGame" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="PauseGame"]
process_mode = 3
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.5
offset_top = -89.0
offset_right = 185.5
offset_bottom = 89.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseGame/Panel"]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PauseGame/Panel/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Game Paused!"
horizontal_alignment = 1

[node name="Continue" type="Button" parent="PauseGame/Panel/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Continue"

[node name="Restart" type="Button" parent="PauseGame/Panel/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Restart
"

[node name="MainMenu" type="Button" parent="PauseGame/Panel/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Main Menu
"

[node name="Quit" type="Button" parent="PauseGame/Panel/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Quit
"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StoreMenu" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("13_fdnlq")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/StoreMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.0
offset_top = -20.0
offset_right = 83.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/StoreMenu/VBoxContainer"]
layout_mode = 2
text = "Welcome to the store"

[node name="BuyRareSong" type="Button" parent="CanvasLayer/StoreMenu/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Buy a rare song"

[node name="UnlockSpace" type="Button" parent="CanvasLayer/StoreMenu/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Unlock the space"

[node name="MainMenu" type="Button" parent="CanvasLayer/StoreMenu/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Explore new level"

[node name="Popups" type="CanvasLayer" parent="."]
script = ExtResource("14_jkdf5")

[node name="Control" type="Control" parent="Popups"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
